        - Massive rewrite of Ordered to properly handle position constraints and
          to make it more matpath-friendly
        - deploy_statements called ddl_filename with the $version and $dir arguments
          in the wrong order. 
        - columns/+columns attributes now support { as => select } hahsrefs
        - support for views both in DBIC and via deploy() in SQLT

0.08099_06 2009-01-23 07:30:00 (UTC)
        - Allow a scalarref to be supplied to the 'from' resultset attribute
        - Classes submitted as result_class for a resultsource are now
          automatically loaded via ensure_loaded()
        - 'result_class' resultset attribute, identical to result_class()
        - add 'undef_on_null_fk' option for relationship accessors of type 'single'.
          This will prevent DBIC from querying the database if one or more of
          the key columns IS NULL
        - for 'belongs_to' rels, 'undef_on_null_fk' defaults to true.
        - fixed scope unaware last_insert_id fetching for MSSQL
          (http://msdn.microsoft.com/en-us/library/ms190315.aspx)
        - an sqlt_deploy_hook can now be shared between result sources using
          a configurable callback trigger
        - new order_by => { -desc => 'colname' } syntax supported
        - PG array datatype supported
        - insert should use store_column, not set_column to avoid marking
          clean just-stored values as dirty. New test for this 
        - regression test for source_name 

0.08099_05 2008-10-30 21:30:00 (UTC)
        - Rewritte of Storage::DBI::connect_info(), extended with an
          additional argument format type
        - InflateColumn::DateTime: add warning about floating timezone
        - InflateColumn::DateTime: possible to enforce/skip inflation
        - delete throws exception if passed arguments to prevent drunken mishaps. (purge)
        - Fix storage to copy scalar conds before regexping to avoid
          trying to modify a constant in odd edge cases