@@ -23,6 +23,8 @@ Revision history for DBIx::Class
           in the wrong order. 
         - columns/+columns attributes now support { as => select } hahsrefs
         - support for views both in DBIC and via deploy() in SQLT
+        - test for not dying if a column isn't loaded after insert and a rel using
+          it is called. (eg ->new({ name => 'foo'})->bar if bar uses bar_id)
 
 0.08099_06 2009-01-23 07:30:00 (UTC)
         - Allow a scalarref to be supplied to the 'from' resultset attribute
